stuff and things

--- a/Recipe_Webpage_Outline.html
+++ b/Recipe_Webpage_Outline.html
@@ -6,7 +6,7 @@
     <title>Insert Name of Recipe</title>
 </head>
 <body>
-   <div id="Recipe"> <h1>Inset Name of recipe</h1> </div>
+   <div id="Recipe"> <h1>Insert Name of recipe</h1> </div>
 <div id="Ingrediants">
    <div>
         <b> Ingrediants</b>
