added more links

--- a/The_Fulton_School_Recipe_Book_Main_Page.html
+++ b/The_Fulton_School_Recipe_Book_Main_Page.html
@@ -8,5 +8,13 @@
 <body>
    <div id="Main_Page"> <h1>The Fulton School Recipe Book</h1> </div>
 <div id="link_1">
-<a href=file:///C:/Users/ryanp/Documents/Recipe_Book_Webpage/Recipe_Belize_Chicken.html target="_blank">#1 belize chicken </a>
+<a href="Recipe_Belize_Chicken.html" target="_blank">#1 Belize Chicken </a>
+</div>
+
+<div id="link_2">
+<a href="Recipe_Naan.html" target="_blank"> #2 Naan </a>
+</div>
+
+<div id="link_3">
+<a href="Recipe_3_Japanese_Milk_Bread.html" target="_blank"> #3 Japanese Milk Bread</a>
 </div>
