added more links

--- a/The_Fulton_School_Recipe_Book_Main_Page.html
+++ b/The_Fulton_School_Recipe_Book_Main_Page.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Fulton School Recipe Book Main Page</title>
+    <title>The Fulton School Interim Recipe Book Main Page</title>
 </head>
 <body>
-   <div id="Main_Page"> <h1>The Fulton School Recipe Book</h1> </div>
+   <div id="Main_Page"> <h1>The Fulton School Interim Recipe Book</h1> </div>
 <div id="link_1">
 <a href="Recipe_Belize_Chicken.html" target="_blank">#1 Belize Chicken </a>
 </div>
